# CMakeBuild

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: c-cpp.yaml
CMakeBuild_Test/: CMakeLists.txt
NWChemExBase/: CMakeLists.txt
NWChemExBase_Test/: CMakeLists.txt  README.md  RunNWChemExBaseTest.sh  TestUtilityMacros.cmake
NWChemExBase_Test/BuildCBLAS_files/: CMakeVars.txt
NWChemExBase_Test/BuildEigen3_files/: BuildEigen3.cpp  BuildEigen3.hpp  CMakeVars.txt
NWChemExBase_Test/BuildLAPACKE_files/: CMakeVars.txt
NWChemExBase_Test/BuildLAPACK_files/: CMakeVars.txt
NWChemExBase_Test/BuildLibInt_files/: BuildLibInt.cpp  BuildLibInt.hpp  CMakeVars.txt
NWChemExBase_Test/BuildNWX_CBLAS_files/: BuildNWX_CBLAS.cpp  CMakeVars.txt
NWChemExBase_Test/InstalledNWXBase_files/: RunTest.sh
NWChemExBase_Test/SimpleRepo_files/: SimpleRepo.cpp  SimpleRepo.hpp
NWChemExBase_Test/TestBuildLibInt/: CMakeLists.txt
cmake/: NWChemExTargetConfig.cmake.in
cmake/build_external/: BuildBLAS.cmake  BuildCBLAS.cmake  BuildGlobalArrays.cmake  BuildLAPACKE.cmake  BuildLibInt.cmake  BuildNWX_BLAS.cmake  BuildNWX_CBLAS.cmake  BuildNWX_LAPACK.cmake  BuildNWX_LAPACKE.cmake  BuildScaLAPACK.cmake  BuildScalapack.cmake
cmake/find_external/: FindBLAS.cmake  FindCBLAS.cmake  FindGlobalArrays.cmake  (+8 more)
dox/: BuildBasics.md  Building.md  CMakeSuperBuild.md  ExtendingNWChemExBase.md  MacroDocumentation.md  SoYouWannaFindBLAS.md  SupportedDependencies.md  UtilityMacros.md
travis/: build_and_test.sh  build_env.sh  build_openblas.sh
(+15 files in other folders)
